Added predefined types, improved API, fixed bug in unions caused by inherited keys

--- a/gulp/template.hbs
+++ b/gulp/template.hbs
@@ -40,7 +40,7 @@ define(['c-struct-js'], (Struct) => { ... })
 
 ```html
 <script>
-  var Struct = window.Struct
+  const { Struct } = window
 </script>
 ```
 
